--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,20 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+    <ion-searchbar
+    [(ngModel)]="searchTerm"
+    [showCancelButton]="shouldShowCancel"
+    (ionInput)="onInput($event)"
+    (ionCancel)="onCancel($event)">
+  </ion-searchbar>
+  <ion-list>
+      <ion-item ion-item  *ngFor="let item of items">
+          <ion-thumbnail item-start>
+            <img src="{{item.small_cover_image}}">
+          </ion-thumbnail>
+          <h2>{{item.title}}</h2>
+          <p>{{item.rating}} • {{item.year}}</p>
+          <button (click)="itemSelected(item)" ion-button clear item-end>View</button>
+        </ion-item>
+     </ion-list>
 </ion-content>
